--- a/garnix.yaml
+++ b/garnix.yaml
@@ -1,5 +1,5 @@
 builds:
-  exclude: ["legacyPackages.*"]
+  exclude: ["legacyPackages.*.*"]
   include:
     - "*.x86_64-linux.*"
     - defaultPackage.x86_64-linux
