--- a/garnix.yaml
+++ b/garnix.yaml
@@ -1,8 +1,10 @@
 builds:
-  exclude:
-    - "legacyPackages.*"
+  exclude: ["legacyPackages.*"]
   include:
-    - "*.x86_64-linux.*"
+    - "*.x86_64-linux.dovi-convert"
+    - "*.x86_64-linux.multi-gitter"
+    - "*.x86_64-linux.strongbox"
+    - "*.x86_64-linux.wiresteward"
     - defaultPackage.x86_64-linux
     - devShell.x86_64-linux
     - homeConfigurations.*
